# my-python-test

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci-release.yml
src/calcpkg/: __init__.py  core.py
tests/: test_calculate.py
