
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calcpkg"
version = "0.1.0"
description = "A tiny calculate() function with CI and GitHub Release workflow"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Demo", email = "demo@example.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["calcpkg*"]
